<resources>
    <string name="app_name">CH2_Apps</string>

    <!-- Estadísticas -->
    <string name="EstadTitulo">Mis Estadisticas</string>
    <string name="EstadSubtitulo">Tu compromiso con el Medio Ambiente</string>
    <string name="EstadisticaBtnSelecEvento">Selecciona un evento</string>
    <string name="EstadisticaMin">Minimo</string>
    <string name="EstadisticaSubMin">La cantidad minima (Kg) por cada tipo de residuo registrado para este evento fue:</string>
    <string name="EstadisticaMax">Maximo</string>
    <string name="EstadisticaSubMax">La cantidad maxima (Kg) por cada tipo de residuo registrado para este evento fue:</string>
    <string name="EstadisticaProm">Promedio</string>
    <string name="EstadisticaSubProm">La cantidad promedio (Kg) por cada tipo de residuo registrado para este evento fue:</string>
    <string name="EstadisticaTotal">Total</string>
    <string name="EstadisticaSubTotal">La cantidad total (Kg) de residuos registrados para este evento fue:</string>
    <string name="EstadResultados">Tus <b>8 Kg</b>  de residuos separados y reciclados generan beneficios por <b>$8.218</b> COP </string>
    <string name="EstadResultadosHint">EcoApp te invita a que continues:</string>
    <string name="EstadConsejoTit1">Reciclando</string>
    <string name="EstadConsejoSub1">Separa tus resuduos en contenedores adecuados.</string>
    <string name="EstadConsejoTit2">Reutilizando</string>
    <string name="EstadConsejoSub2">Dale una segunda vida a un producto.</string>
    <string name="EstadConsejoTit3">Reduciendo</string>
    <string name="EstadConsejoSub3">El consumo de agua, energia y combustible.</string>


    <!-- Consejos -->
    <string name="ConsejoTitulo">ECO TIPS</string>
    <string name="ConsejoNota1">Realiza una planificación sostenible, evaluando proveedores, materiales.</string>
    <string name="ConsejoNota2">Proporciona estaciones de reciclaje y compostaje claramente identificadas para su uso.</string>
    <string name="ConsejoNota3">Promueve la conciencia ambiental de los asistentes con anuncios, cartles y charlas.</string>
    <string name="ConsejoNota4">Opta por proveedores que ofrezcan opciones más sostenibles en términos de envases y productos promocionales.</string>


    <!-- Inicio de Sesión -->
    <string name="LoginBienvenido">¡Bienvenido!</string>
    <string name="LoginSlogan">Haz parte del cambio…</string>
    <string name="LoginRegistrate">Registrate Aquí</string>
    <string name="LoginSloganLogo">Eventos Sostenibles con el Medio Ambiente</string>
    <string name="LoginCorreo">Correo Electrónico</string>
    <string name="LoginContrasena">Contraseña</string>
    <string name="LoginIngresar">Ingresar</string>
    <string name="LoginOtrasOpciones">Tambien puedes ingresar a través de …</string>



    <!-- General -->
    <string name="regresar">regresar</string>


    <!-- Registro Consumo -->
    <string name="CalculadoraTitulo">Envases y Empaques</string>
    <string name="CalculadoraBtnConsultar">Consultar Evento</string>
    <string name="CalculadoraSubtituloPlastico">PLÁSTICO</string>
    <string name="CalculadoraSubtituloAluminio">ALUMINIO</string>
    <string name="CalculadoraSubtituloCarton">CARTÓN</string>
    <string name="CalculadoraSubtituloTetrapack">TETRAPACK</string>
    <string name="CalculadoraSubtituloVidrio">VIDRIO</string>
    <string name="CalculadoraHintKg">Kilogramos</string>

    <string name="CalculadoraBtnRegistrar">Registrar Consumo</string>

    <!-- Menu Principal -->
    <string name="MenuPrinEventos">Mis Eventos</string>
    <string name="MenuPrincRegistrar">Registrar Consumo</string>
    <string name="MenuPrincEstadisticas">Mis Estadísticas</string>
    <string name="MenuPrincSlogan1">Reducir la generación de residuos en eventos es fundamental para minimizar su impacto ambiental y promover la sostenibilidad.</string>
    <string name="MenuPrincDialogoTitulo">Hola soy EVENT!</string>
    <string name="MenuPrincDialogoMensaje">Vamos a calcular los beneficios medioambientales que generas al reciclar envases y empaques en tus eventos.</string>


    <!-- Registro -->
    <string name="RegistroBienvenido">Bienvenido!</string>
    <string name="RegistroTitulo">Registro</string>
    <string name="RegistroNombre">Nombres y Apellidos</string>
    <string name="RegistroContrasena">Contraseña</string>
    <string name="RegistroCiudad">Selecciona tu ciudad</string>
    <string name="RegistroCorreo">Correo electronico</string>
    <string name="registro_terminos">Acepto el tratamiento, almacenamiento y uso de mis datos personales, de conformidad con lo establecido en los <a href="link1">Términos y Condiciones</a> de uso de la App.</string>
    <string name="RegistroGuardar">Guardar</string>

    <!-- Terminos -->
    <string name="terminos_titulo">Aceptación de Términos y Condiciones</string>
    <string name="terminos">Al marcar la casilla el Usuario acepta expresamente los “Términos y Condiciones”, siendo condición esencial para la utilización de la aplicación. En el evento en que se encuentre en desacuerdo con estos Términos y Condiciones, solicitamos abandonar la aplicación inmediatamente. ECO APP podrá modificar los presentes términos y condiciones, avisando a los usuarios de la aplicación mediante la difusión de las modificación por algún medio electrónico, redes sociales, SMS y/o correo electrónico, lo cual se entenderá aceptado por el usuario si éste continua con el uso de la aplicación. Resposanbilidad, ECO APP procurará garantizar disponibilidad, continuidad o buen funcionamiento de la aplicación. ECO APP podrá bloquear, interrumpir o restringir el acceso a esta cuando lo considere necesario para el mejoramiento de la aplicación o por dada de baja de la misma. Se recomienda al Usuario tomar medidas adecuadas y actuar diligentemente al momento de acceder a la aplicación, como por ejemplo, contar con programas de protección, antivirus, para manejo de malware, spyware y herramientas similares. ECO APP no será responsable por: a) Fuerza mayor o caso fortuito; b) Por la pérdida, extravío o hurto de su dispositivo móvil que implique el acceso de terceros a la aplicación móvil; c) Por errores en la digitación o accesos por parte del cliente; d) Por los perjuicios, lucro cesante, daño emergente, morales, y en general sumas a cargo de ECO APP, por los retrasos, no procesamiento de información o suspensión del servicio del operador móvil o daños en los dispositivos móviles.Jurisdicción, estos términos y condiciones y todo lo que tenga que ver con esta aplicación, se rigen por las leyes de colombianas. Uso de información no personal, ECO APP también recolecta información no personal en forma agregada para seguimiento de datos como el número total de descargas de la aplicación. Utilizamos esta información, que permanece en forma agregada, para entender el comportamiento de la aplicación.</string>

    <!-- Crear Evento -->
    <string name="CrearEventoTitulo">Crea tu evento</string>
    <string name="CrearEventoNombre">Nombre del evento</string>
    <string name="CrearEventoFecha">DD/MM/AAAA - Fecha del evento</string>
    <string name="CrearEventoLugar">Lugar del evento</string>
<string name="CrearEventoAsistentes">Numero de asistentes</string>
    <string name="CrearEventoGuardar">GUARDAR</string>
</resources>