<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E49D9D"
    android:backgroundTint="#D88484"
    tools:context=".EstadisticasActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fbf4f4"
        tools:layout_editor_absoluteX="-75dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="0dp"
                android:paddingBottom="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnRegresar"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="5dp"
                        android:background="#fbf4f4"
                        android:contentDescription="@string/regresar"
                        android:foregroundGravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/back_arrow" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/EstadTitulo"
                    android:textColor="#3f8d55"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="242dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_light"
                    android:text="@string/EstadSubtitulo"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingVertical="10sp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSeleccEvento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_semibold"
                        android:text="@string/EstadisticaBtnSelecEvento"
                        android:textColor="#000000"
                        app:backgroundTint="#C8C8C8"
                        app:cornerRadius="8dp"
                        app:strokeColor="@color/Verde_Aburrido"
                        app:strokeWidth="2dp" />
                    <!--                <TextView
                    android:id="@+id/subTitleSelect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/EstadisticaMin"
                    android:textColor="#000000"
                    android:textSize="20sp" />-->
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/BarChartLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:visibility="invisible"
                tools:visibility="visible">

                <LinearLayout
                    android:id="@+id/minBarChartLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="15dp" />

                    <TextView
                        android:id="@+id/subTitleMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="0dp"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/EstadisticaMin"
                        android:textColor="#3f8d55"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/subTextMin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_light"
                        android:text="@string/EstadisticaSubMin"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/emptyMinBarChart"
                        android:layout_width="match_parent"
                        android:layout_height="236dp"
                        android:layout_margin="25dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/maxBarChartLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="15dp" />

                    <TextView
                        android:id="@+id/subTitleMax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="0dp"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/EstadisticaMax"
                        android:textColor="#3f8d55"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/subTextMax"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_light"
                        android:text="@string/EstadisticaSubMax"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/emptyMaxBarChart"
                        android:layout_width="match_parent"
                        android:layout_height="236dp"
                        android:layout_margin="25dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/promBarChartLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="15dp" />

                    <TextView
                        android:id="@+id/subTitleProm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="0dp"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/EstadisticaProm"
                        android:textColor="#3f8d55"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/subTextProm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_light"
                        android:text="@string/EstadisticaSubProm"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/emptyPromBarChart"
                        android:layout_width="match_parent"
                        android:layout_height="236dp"
                        android:layout_margin="25dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/totalBarChartLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="15dp" />

                    <TextView
                        android:id="@+id/subTitleTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="0dp"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/EstadisticaTotal"
                        android:textColor="#3f8d55"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/subTextTotal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_light"
                        android:text="@string/EstadisticaSubTotal"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/emptyTotalBarChart"
                        android:layout_width="match_parent"
                        android:layout_height="236dp"
                        android:layout_margin="25dp" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />
            </LinearLayout>

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingRight="25dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="172dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/green_boy" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autoSizeTextType="none"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/EstadResultados"
                        android:textColor="#4D724D"
                        android:textSize="16dp" />
                </LinearLayout>

            </LinearLayout>-->

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/EstadResultadosHint"
                android:textColor="#1594AF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/estad_reciclar" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_black"
                        android:gravity="center"
                        android:text="@string/EstadConsejoTit1"
                        android:textColor="#328B32" />

                    <TextView
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/EstadConsejoSub1"
                        android:textColor="#328B32"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/estad_reutilizar" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_black"
                        android:gravity="center"
                        android:text="@string/EstadConsejoTit2"
                        android:textColor="#1594AF" />

                    <TextView
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/EstadConsejoSub2"
                        android:textColor="#1594AF"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/estad_reducir" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_black"
                        android:gravity="center"
                        android:text="@string/EstadConsejoTit3"
                        android:textColor="#328B32" />

                    <TextView
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/EstadConsejoSub3"
                        android:textColor="#328B32"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>