<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnRegresar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="5dp"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/regresar"
                    android:foregroundGravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back_arrow" />
            </LinearLayout>

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RegistroBienvenido"
                android:textColor="#4D724D"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/RegistroTitulo"
                android:textColor="#3D69AB"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="186dp"
                android:layout_height="189dp"
                android:layout_marginStart="112dp"
                android:layout_marginEnd="113dp"
                android:layout_marginBottom="11dp"
                app:srcCompat="@drawable/image_41registro" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_nombre"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="#7F8877"
                    app:errorEnabled="true"
                    app:hintTextColor="#7F8877">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/RegistroNombre" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_contrasena"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="#7F8877"
                    app:errorEnabled="true"
                    app:hintTextColor="#7F8877">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etd_contrasena"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/RegistroContrasena"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_ciudad"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="#7F8877"
                    app:errorEnabled="true"
                    app:hintTextColor="#7F8877">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etd_ciudad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/RegistroCiudad" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_correo"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="#7F8877"
                    app:errorEnabled="true"
                    app:hintTextColor="#7F8877">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etd_correo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/RegistroCorreo"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registro_campo_contrasena">

                <CheckBox
                    android:id="@+id/aceptar_terminos"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/registro_terminos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="@string/registro_terminos"
                    android:textColor="#1E1E1E" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingBottom="25dp">

                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="200dp"
                    android:height="60dp"
                    android:backgroundTint="#4D724D"
                    android:text="@string/RegistroGuardar"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>